# LearnToLearn

./: .env.template  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_08_14_1910-c77e80817c63_created_user_translation_userprogress_.py  2024_08_15_1754-e5c5264efd8b_created_user_table.py  2024_08_16_0035-2f5dede38202_create_access_token_table.py  513f15e61286_initial_tables.py
src/: __init__.py  create_fastapi_app.py  crud.py  database.py  main.py
src/actions/: create_superuser.py
src/api/: __init__.py
src/api/api_v1/: __init__.py  auth.py  fastapi_users.py  users.py
src/api/dependencies/: backend.py  user_manager.py
src/api/dependencies/authentication/: __init__.py  access_tokens.py  fastapi_users.py  strategy.py  users.py
src/auth/models/: models.py
src/core/: config.py  models.py
src/core/auth/: access_token.py  transport.py  user_manager.py
src/core/auth/models/: __init__.py  access_token.py  models.py
src/core/models/: __init__.py  access_token.py  base.py  database.py  models.py  user.py
src/core/models/mixins/: int_id_pk.py
src/core/schemas/: user.py
src/utils/: __init__.py
